<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/dp_10"
    android:paddingLeft="@dimen/dp_15"
    android:paddingRight="@dimen/dp_15"
    android:paddingTop="@dimen/dp_20">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tlUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/light_grey1"
        app:errorEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/teUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:maxLength="25"
            android:singleLine="true"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_16_sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tlPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/light_grey1"
        app:errorEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlUsername">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/pass_hint"
            android:inputType="textPassword"
            android:maxLength="10"
            android:singleLine="true"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_16_sp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/bg_btn_pink_rect_selector"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_20_sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlPass" />
</android.support.constraint.ConstraintLayout>